--- a/Sustentabilidade/assets/css/styles.scss
+++ b/Sustentabilidade/assets/css/styles.scss
@@ -89,7 +89,7 @@ section {
             border-radius: 10px;
             background-image: url(../img/Banner.jpg);
             background-size: cover;
-            background-position: 10%;
+            background-position: bottom;
             border: none;
             box-shadow: 2px 0 10px grey;
             transition: all .5s;
